--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,10 @@ name: build-and-push-guess-app
 on: [push]
 jobs:
     build-and-push:
-        runs-on: ubuntu-latest
+        runs-on: ${{matrix.os}}
+        strategy:
+            matrix:
+                os: [ubuntu-latest, windows-latest, macos-latest]
         steps:
             - name: Checkout source code from git repository
               uses: actions/checkout@v3
