--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,10 @@ jobs:
               run: mkdir ~/artifact
             - name: Build
               run: go build -o ~/artifact
+            - name: Test
+              run: go test -v ~/artifact
+            - name: Run
+              run: go run guess.go
             - name: Show build
               run: ls -l ~/artifact
             - name: Upload artifact
